Troubleshooting 100vh issue on mobile.

--- a/theme/global.css
+++ b/theme/global.css
@@ -43,15 +43,15 @@
             animation: dash 1.75s linear 0s forwards infinite;
   }
 
-  @media all and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait) {
-    body {                           
+@media all and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait) {
+    body, .home-stone {                           
         height: 1024px;                         
     }                       
 }   
                                             
 /* iPad with landscape orientation. */                       
 @media all and (device-width: 768px) and (device-height: 1024px) and (orientation:landscape) {                         
-    body {                           
+    body, .home-stone {                           
         height: 768px;                         
     }                       
 }
@@ -59,7 +59,7 @@
 /* iPhone 5 
 You can also target devices with aspect ratio. */
 @media screen and (device-aspect-ratio: 40/71) {                              
-    body {                           
+    body, .home-stone {                           
         height: 500px;                         
     }                       
 }
